FIX: arch and swagger
