# docs/swagger.json
@@ -54,7 +54,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tem2024.getAllPagesMusicItemsResponse"
+                            "$ref": "#/definitions/handler.getAllPagesMusicItemsResponse"
                         }
                     },
                     "400": {
@@ -111,7 +111,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/handler.statusResponse"
                         }
                     },
                     "400": {
@@ -143,7 +143,7 @@
         },
         "/api/music/{id}": {
             "get": {
-                "description": "REturn music text with pagination",
+                "description": "Return music text with pagination",
                 "consumes": [
                     "application/json"
                 ],
@@ -327,13 +327,24 @@
                 }
             }
         },
+        "handler.getAllPagesMusicItemsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tem2024.GetPageMusicItemsResponse"
+                    }
+                }
+            }
+        },
         "handler.getMusicTextResponse": {
             "type": "object",
             "properties": {
                 "text": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/tem2024.MusicText"
+                        "$ref": "#/definitions/tem2024.CoupletMusicText"
                     }
                 }
             }
@@ -343,6 +354,25 @@
             "properties": {
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "tem2024.CoupletMusicText": {
+            "type": "object",
+            "properties": {
+                "couplet": {
+                    "type": "string"
+                }
+            }
+        },
+        "tem2024.GetPageMusicItemsResponse": {
+            "type": "object",
+            "properties": {
+                "page": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/tem2024.MusicItem"
+                    }
                 }
             }
         },
@@ -373,14 +403,6 @@
                 }
             }
         },
-        "tem2024.MusicText": {
-            "type": "object",
-            "properties": {
-                "couplet": {
-                    "type": "string"
-                }
-            }
-        },
         "tem2024.UpdateMusicInput": {
             "type": "object",
             "properties": {
@@ -398,28 +420,6 @@
                 },
                 "text": {
                     "type": "string"
-                }
-            }
-        },
-        "tem2024.getAllPagesMusicItemsResponse": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tem2024.getPageMusicItemsResponse"
-                    }
-                }
-            }
-        },
-        "tem2024.getPageMusicItemsResponse": {
-            "type": "object",
-            "properties": {
-                "page": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tem2024.MusicItem"
-                    }
                 }
             }
         }
